modules/gdscript/tests/scripts/analyzer/errors/dictionary_duplicate_key_expr_python.gd
func test():
	var python_dict = {
		"ab": 1,
		"ba": 2,
		"a" + "b": 3, # Duplicate as a result of an expression isn't allowed.
	}
